--- a/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
+++ b/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
@@ -162,8 +162,13 @@ jobs:
     - name: Init tests configurations
       run: |
         if [[ ${{ matrix.runner_print_label }} == "TGL" ]]; then
-          echo "TEST_CONFIGS=on_host/samples_TGL.json" >> $GITHUB_ENV
-          echo "Selected test configuration file: on_host/samples_TGL.json ✅" >> $GITHUB_STEP_SUMMARY
+          if [[ ${{ matrix.ubuntu_version }} == "ubuntu22" ]]; then
+            echo "TEST_CONFIGS=on_host/samples_TGL22.json" >> $GITHUB_ENV
+            echo "Selected test configuration file: on_host/samples_TGL.json ✅" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "TEST_CONFIGS=on_host/samples_TGL.json" >> $GITHUB_ENV
+            echo "Selected test configuration file: on_host/samples_TGL.json ✅" >> $GITHUB_STEP_SUMMARY
+          fi
         elif [[ ${{ matrix.runner_print_label }} == "ARL" ]]; then
           echo "TEST_CONFIGS=on_host/samples_ARL.json" >> $GITHUB_ENV
           echo "Selected test configuration file: on_host/samples_ARL.json ✅" >> $GITHUB_STEP_SUMMARY
