--- a/.github/workflows/GENAI-Chat-question-and-answer.yaml
+++ b/.github/workflows/GENAI-Chat-question-and-answer.yaml
@@ -146,131 +146,131 @@ jobs:
   #         path: security-results/clamav*
 
 # GitLeaks scanning job - matching your existing pattern
-  gitleaks-scan:
-    runs-on: ubuntu-22.04-32core-128GB
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
-        with:
-          persist-credentials: false
+  # gitleaks-scan:
+  #   runs-on: ubuntu-22.04-32core-128GB
+  #   permissions:
+  #     contents: read
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
+  #       with:
+  #         persist-credentials: false
           
-      - name: Install gitleaks
-        uses: open-edge-platform/orch-ci/.github/actions/bootstrap@5f1c7f544b235db6ded508b6b4c6a2d3a78a38be
-        with:
-          bootstrap_tools: "gitleaks"
+  #     - name: Install gitleaks
+  #       uses: open-edge-platform/orch-ci/.github/actions/bootstrap@5f1c7f544b235db6ded508b6b4c6a2d3a78a38be
+  #       with:
+  #         bootstrap_tools: "gitleaks"
           
-      - name: Get current timestamp
-        id: timestamp
-        run: echo "time=$(date +%s)" >> "$GITHUB_OUTPUT"
+  #     - name: Get current timestamp
+  #       id: timestamp
+  #       run: echo "time=$(date +%s)" >> "$GITHUB_OUTPUT"
         
-      - name: Clone CI repo
-        uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
-        with:
-          repository: open-edge-platform/orch-ci
-          path: ci
-          persist-credentials: false
+  #     - name: Clone CI repo
+  #       uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
+  #       with:
+  #         repository: open-edge-platform/orch-ci
+  #         path: ci
+  #         persist-credentials: false
           
-      - name: Scan for secrets
-        run: |
-          gitleaks dir "sample-applications/chat-question-and-answer/" -v -c ci/.gitleaks.toml --baseline-path ci/gitleaks_baselines/gitleaks-chatqna.json -r gitleaks-chatqna.json || true
+  #     - name: Scan for secrets
+  #       run: |
+  #         gitleaks dir "sample-applications/chat-question-and-answer/" -v -c ci/.gitleaks.toml --baseline-path ci/gitleaks_baselines/gitleaks-chatqna.json -r gitleaks-chatqna.json || true
           
-      - name: Upload Gitleaks Report
-        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
-        with:
-          name: gitleaks-report-chat-qna-${{ steps.timestamp.outputs.time }}
-          path: gitleaks-chatqna.json
+  #     - name: Upload Gitleaks Report
+  #       uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
+  #       with:
+  #         name: gitleaks-report-chat-qna-${{ steps.timestamp.outputs.time }}
+  #         path: gitleaks-chatqna.json
 
   # Python linting with pylint
-  pylint-scan:
-    runs-on: ubuntu-22.04-32core-128GB
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
+  # pylint-scan:
+  #   runs-on: ubuntu-22.04-32core-128GB
+  #   permissions:
+  #     contents: read
+  #   steps:
+  #     - uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
       
-      - name: Setup Python
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
-        with:
-          python-version: '3.12'
+  #     - name: Setup Python
+  #       uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+  #       with:
+  #         python-version: '3.12'
       
-      - name: Install Poetry
-        run: |
-          pip install poetry
+  #     - name: Install Poetry
+  #       run: |
+  #         pip install poetry
           
-      - name: Install dependencies and pylint
-        run: |
-          cd sample-applications/chat-question-and-answer/
-          poetry install
-          poetry add --group dev pylint
+  #     - name: Install dependencies and pylint
+  #       run: |
+  #         cd sample-applications/chat-question-and-answer/
+  #         poetry install
+  #         poetry add --group dev pylint
       
-      - name: Run pylint
-        run: |
-          cd sample-applications/chat-question-and-answer/
-          mkdir -p security-results
-          echo "=== Pylint Scan Results ===" > security-results/pylint-report-chat-qna.txt
-          echo "Scan Date: $(date)" >> security-results/pylint-report-chat-qna.txt
-          echo "" >> security-results/pylint-report-chat-qna.txt
+  #     - name: Run pylint
+  #       run: |
+  #         cd sample-applications/chat-question-and-answer/
+  #         mkdir -p security-results
+  #         echo "=== Pylint Scan Results ===" > security-results/pylint-report-chat-qna.txt
+  #         echo "Scan Date: $(date)" >> security-results/pylint-report-chat-qna.txt
+  #         echo "" >> security-results/pylint-report-chat-qna.txt
           
-          # Create a basic pylint config
-          cat > .pylintrc << EOF
-          [MESSAGES CONTROL]
-          disable=C0111,C0103,R0903,R0913,W0613,W0622,R0801,R0902,R0914,R0915,R0912,C0301,C0302
+  #         # Create a basic pylint config
+  #         cat > .pylintrc << EOF
+  #         [MESSAGES CONTROL]
+  #         disable=C0111,C0103,R0903,R0913,W0613,W0622,R0801,R0902,R0914,R0915,R0912,C0301,C0302
           
-          [FORMAT]
-          max-line-length=120
+  #         [FORMAT]
+  #         max-line-length=120
           
-          [REPORTS]
-          output-format=text
-          reports=yes
-          EOF
+  #         [REPORTS]
+  #         output-format=text
+  #         reports=yes
+  #         EOF
           
-          # Find all Python files and lint them
-          find app/ -type f -name "*.py" -exec poetry run pylint --rcfile=.pylintrc {} + >> security-results/pylint-report-chat-qna.txt 2>&1 || true
+  #         # Find all Python files and lint them
+  #         find app/ -type f -name "*.py" -exec poetry run pylint --rcfile=.pylintrc {} + >> security-results/pylint-report-chat-qna.txt 2>&1 || true
           
-          echo "Pylint scan completed"
+  #         echo "Pylint scan completed"
       
-      - name: Upload pylint Report
-        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
-        with:
-          name: pylint-report-chat-qna
-          path: sample-applications/chat-question-and-answer/security-results/pylint-report-chat-qna.txt
+  #     - name: Upload pylint Report
+  #       uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
+  #       with:
+  #         name: pylint-report-chat-qna
+  #         path: sample-applications/chat-question-and-answer/security-results/pylint-report-chat-qna.txt
 
 # ShellCheck scanning job
-  shellcheck-scan:
-    runs-on: ubuntu-22.04-32core-128GB
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
+  # shellcheck-scan:
+  #   runs-on: ubuntu-22.04-32core-128GB
+  #   permissions:
+  #     contents: read
+  #   steps:
+  #     - uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
       
-      - name: Setup environment with shellcheck
-        uses: open-edge-platform/orch-ci/.github/actions/bootstrap@5f1c7f544b235db6ded508b6b4c6a2d3a78a38be
-        with:
-          bootstrap_tools: "shellcheck"
+  #     - name: Setup environment with shellcheck
+  #       uses: open-edge-platform/orch-ci/.github/actions/bootstrap@5f1c7f544b235db6ded508b6b4c6a2d3a78a38be
+  #       with:
+  #         bootstrap_tools: "shellcheck"
       
-      - name: Run ShellCheck
-        run: |
-          mkdir -p security-results
-          echo "=== ShellCheck Scan Results ===" > security-results/shellcheck-report-chat-qna.txt
-          echo "Scan Date: $(date)" >> security-results/shellcheck-report-chat-qna.txt
-          echo "" >> security-results/shellcheck-report-chat-qna.txt
+  #     - name: Run ShellCheck
+  #       run: |
+  #         mkdir -p security-results
+  #         echo "=== ShellCheck Scan Results ===" > security-results/shellcheck-report-chat-qna.txt
+  #         echo "Scan Date: $(date)" >> security-results/shellcheck-report-chat-qna.txt
+  #         echo "" >> security-results/shellcheck-report-chat-qna.txt
           
-          # Find all shell scripts and check them
-          find sample-applications/chat-question-and-answer/ -type f \( -name "*.sh" -o -name "*.bash" \) -print0 | while IFS= read -r -d '' file; do
-            echo "Checking: $file" >> security-results/shellcheck-report-chat-qna.txt
-            shellcheck "$file" >> security-results/shellcheck-report-chat-qna.txt 2>&1 || true
-            echo "---" >> security-results/shellcheck-report-chat-qna.txt
-          done
+  #         # Find all shell scripts and check them
+  #         find sample-applications/chat-question-and-answer/ -type f \( -name "*.sh" -o -name "*.bash" \) -print0 | while IFS= read -r -d '' file; do
+  #           echo "Checking: $file" >> security-results/shellcheck-report-chat-qna.txt
+  #           shellcheck "$file" >> security-results/shellcheck-report-chat-qna.txt 2>&1 || true
+  #           echo "---" >> security-results/shellcheck-report-chat-qna.txt
+  #         done
           
-          echo "ShellCheck scan completed"
+  #         echo "ShellCheck scan completed"
       
-      - name: Upload ShellCheck Report
-        uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
-        with:
-          name: shellcheck-report-chat-qna
-          path: security-results/shellcheck-report-chat-qna.txt
+  #     - name: Upload ShellCheck Report
+  #       uses: actions/upload-artifact@de65e23aa2b7e23d713bb51fbfcb6d502f8667d8
+  #       with:
+  #         name: shellcheck-report-chat-qna
+  #         path: security-results/shellcheck-report-chat-qna.txt
 
 
 #Run Unit test cases
@@ -289,8 +289,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd sample-applications/chat-question-and-answer/ui/react/
-          npm ci
-                    npm install
+          npm install
           npm install -D vitest@2.1.9
           npm run test
           npm run test:ui
