--- a/.github/workflows/GENAI-Chat-question-and-answer.yaml
+++ b/.github/workflows/GENAI-Chat-question-and-answer.yaml
@@ -343,7 +343,7 @@ jobs:
           cd sample-applications/chat-question-and-answer/
           # Backend Coverage (including all production Python files)
           pip install poetry
-          poetry install
+          poetry install || true
           poetry add --group dev pytest-cov
           poetry run pytest tests/unit_tests/ \
             --cov=app \
