Update Workflow for testing makefile changes

--- a/.github/workflows/GEN-AI-Chat-qna-core.yaml
+++ b/.github/workflows/GEN-AI-Chat-qna-core.yaml
@@ -14,7 +14,7 @@ concurrency:
 on:
   pull_request:
     branches:
-      - main
+      - ciscans-makefile
     paths:
       - 'sample-applications/chat-question-and-answer-core/**'
 
