--- a/.github/workflows/GEN-AI-Chat-qna-core.yaml
+++ b/.github/workflows/GEN-AI-Chat-qna-core.yaml
@@ -35,35 +35,42 @@ jobs:
 
   # Job 2: Build AND Scan each component in parallel
   build_and_scan:
-    runs-on: ubuntu-22.04-32core-128GB
-    needs: setup # Depends on the matrix from the setup job
+    runs-on: ubuntu-22-04-32core-128GB
+    needs: setup
     strategy:
       fail-fast: false
-      matrix: ${{ fromJSON(needs.setup.outputs.matrix) }} # Dynamically create jobs
+      matrix: ${{ fromJSON(needs.setup.outputs.matrix) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709
 
       - name: Build Docker image for ${{ matrix.name }}
         working-directory: sample-applications/chat-question-and-answer-core
-        # Efficiently build only the component for this specific job
         run: make build-${{ matrix.name }}
 
-      # --- TRIVY SCANS NOW RUN IN THE SAME JOB ---
+      # --- THIS IS THE CORRECTED TRIVY SCAN ---
       - name: Run Trivy Image Scan - ${{ matrix.name }} (HTML)
         uses: open-edge-platform/orch-ci/.github/actions/security/trivy@27276444a9bcf247a27369406686b689933bd1ff
+        # Set the matrix variable as an environment variable for this step
+        env:
+          IMAGE_TO_SCAN: ${{ matrix.image }}
         with:
           scan_type: "image"
-          scan_target: ${{ matrix.image }} # This will now work correctly
+          # Reference the clean environment variable instead of the matrix context
+          scan_target: ${{ env.IMAGE_TO_SCAN }}
           severity: "HIGH,CRITICAL"
           format: "table"
           report_suffix: "-image-${{ matrix.name }}-html"
 
       - name: Run Trivy Image Scan - ${{ matrix.name }} (SPDX)
         uses: open-edge-platform/orch-ci/.github/actions/security/trivy@27276444a9bcf247a27369406686b689933bd1ff
+        # Set the matrix variable as an environment variable for this step
+        env:
+          IMAGE_TO_SCAN: ${{ matrix.image }}
         with:
           scan_type: "image"
-          scan_target: ${{ matrix.image }} # This will now work correctly
+          # Reference the clean environment variable
+          scan_target: ${{ env.IMAGE_TO_SCAN }}
           severity: "HIGH,CRITICAL"
           format: "spdx-json"
           scanners: "vuln"
