Use python bindings to run pipeline

--- a/tools/visual-pipeline-and-platform-evaluation-tool/Dockerfile.vippet
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/Dockerfile.vippet
@@ -18,7 +18,12 @@ FROM intel/dlstreamer:2025.1.2-ubuntu24
 
 USER root
 
-RUN apt-get update && apt-get install --yes --no-install-recommends gstreamer1.0-plugins-ugly
+RUN apt-get update && apt-get install --yes --no-install-recommends gstreamer1.0-plugins-ugly \
+    python3-gi python3-gst-1.0 \
+    gstreamer1.0-tools \
+    gir1.2-gstreamer-1.0 gir1.2-gst-plugins-base-1.0
+
+RUN ln -s /usr/lib/x86_64-linux-gnu/libpython3.12.so.1.0 /usr/lib/x86_64-linux-gnu/libpython3.12.so
 
 USER dlstreamer
 
@@ -27,7 +32,7 @@ ENV GST_PLUGIN_PATH=$GST_PLUGIN_PATH/usr/lib/x86_64-linux-gnu/gstreamer-1.0/
 WORKDIR /home/dlstreamer/vippet
 
 ENV VIRTUAL_ENV=/home/dlstreamer/vippet/.venv
-RUN python3 -m venv $VIRTUAL_ENV
+RUN python3 -m venv $VIRTUAL_ENV --system-site-packages
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 COPY requirements.txt /home/dlstreamer/vippet/requirements.txt
