--- a/tools/visual-pipeline-and-platform-evaluation-tool/Dockerfile.vippet
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/Dockerfile.vippet
@@ -51,4 +51,4 @@ COPY --chown=dlstreamer:dlstreamer \
 
 COPY --chown=dlstreamer:dlstreamer pipelines/ /home/dlstreamer/vippet/pipelines
 
-CMD ["/bin/bash", "-c", "./cleanup_models.sh; python app.py"]
+CMD ["/bin/bash", "-c", "./cleanup_models.sh; python app.py > fps-metrics.txt"]
