--- a/libraries/dl-streamer/src/openvino/openvino_inference/CMakeLists.txt
+++ b/libraries/dl-streamer/src/openvino/openvino_inference/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 set(TARGET_NAME "openvino_inference")
 
+find_package(OpenCL)
 find_package(OpenVINO REQUIRED)
 pkg_search_module(VA va libva REQUIRED)
 
@@ -24,5 +25,18 @@ PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../../monolithic/inference_backend/include/inference_backend/
     ${VA_INCLUDE_DIRS}
 )
+
+if (OpenCL_FOUND)
+target_include_directories(${TARGET_NAME}
+PRIVATE
+        ${OpenCL_INCLUDE_DIRS}
+)
+
+target_link_libraries(${TARGET_NAME}
+PUBLIC
+        ${OpenCL_LIBRARY}
+)
+endif()
+
 
 install(TARGETS ${TARGET_NAME} DESTINATION ${DLSTREAMER_PLUGINS_INSTALL_PATH})
