Add  workflow_dispatch:

--- a/.github/workflows/dlsps_sanity_test.yaml
+++ b/.github/workflows/dlsps_sanity_test.yaml
@@ -10,7 +10,7 @@ on:
   pull_request:
     paths:
       - 'microservices/dlstreamer-pipeline-server/**'
-      
+  workflow_dispatch:
   workflow_call:
 permissions: {}
 jobs:
