--- a/.github/workflows/dlsps_sanity_test.yaml
+++ b/.github/workflows/dlsps_sanity_test.yaml
@@ -16,16 +16,10 @@ permissions: {}
 jobs:
   sanity:
      
-    runs-on: dlstreamer
+    runs-on: [dlstreamer,ubuntu22]
     permissions:
       contents: read
-      packages: write
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - ubuntu_version: ubuntu22
-          
+      packages: write 
     steps:
     - name: Check out edge-ai-libraries repository
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #4.2.2
@@ -45,9 +39,6 @@ jobs:
     - name: Sanity Test
       
       run: | 
-       sudo apt-get update
-       sudo pip install robotframework
-       sudo apt install -y python3-nose libxml2-utils vlc
        cd edge-ai-libraries-repo/microservices/dlstreamer-pipeline-server/tests/scripts/utils/
        chmod a+x stream_rtsp.sh
        ip_addr=`hostname -I | awk '{print $1}'`
