[DLStreamer] Temporary comment out of runners reboots (#1036)
Signed-off-by: Michalowski, Dawid <dawid.michalowski@intel.com>

--- a/.github/workflows/dls-build-and-test-windows.yaml
+++ b/.github/workflows/dls-build-and-test-windows.yaml
@@ -112,8 +112,8 @@ jobs:
             Remove-Item -Recurse -Force ${{ env.DLS_REPO_TARGET_DIRECTORY }}
         }
 
-    - name: Schedule reboot
-      if: always()
-      shell: powershell
-      run: |
-        Start-Job { Start-Sleep -Seconds 15; Restart-Computer -Force }
+    # - name: Schedule reboot
+    #   if: always()
+    #   shell: powershell
+    #   run: |
+    #     Start-Job { Start-Sleep -Seconds 15; Restart-Computer -Force }
