--- a/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
+++ b/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
@@ -235,12 +235,12 @@ jobs:
         sudo rm -f $HOME/dl-streamer
         rm -rf edge-ai-libraries-repo
 
-    - name: Schedule reboot
-      if: always()
-      run: |
-        echo "Scheduling reboot in 15 seconds..."
-        if [ -x /usr/local/bin/reboot_runner.sh ]; then
-          sudo /usr/local/bin/reboot_runner.sh 15
-        else
-          echo "WARNING: /usr/local/bin/reboot_runner.sh not found or not executable. Skipping reboot."
-        fi
+    # - name: Schedule reboot
+    #   if: always()
+    #   run: |
+    #     echo "Scheduling reboot in 15 seconds..."
+    #     if [ -x /usr/local/bin/reboot_runner.sh ]; then
+    #       sudo /usr/local/bin/reboot_runner.sh 15
+    #     else
+    #       echo "WARNING: /usr/local/bin/reboot_runner.sh not found or not executable. Skipping reboot."
+    #     fi
