TS_scan: Added debug statement
Signed-off-by: Sudarshana Panda <sudarshana.panda@intel.com>

--- a/.github/workflows/timeseries-scans.yaml
+++ b/.github/workflows/timeseries-scans.yaml
@@ -383,6 +383,7 @@ jobs:
               EOF
               source .env
               IMAGE_TO_SCAN="${TIME_SERIES_ANALYTICS_IMAGE}${IMAGE_SUFFIX:+-${IMAGE_SUFFIX}}"
+              echo "Scanning image: ${IMAGE_TO_SCAN}"
               trivy image "${IMAGE_TO_SCAN}" --list-all-pkgs --ignore-unfixed --format template --template "@trivy-html.tpl" -o trivy_image_scan.html
               trivy image --quiet --list-all-pkgs --format spdx-json --output trivy_image_scan.spdx.json "${IMAGE_TO_SCAN}"
               trivy image "${IMAGE_TO_SCAN}" --list-all-pkgs --format template --template "@csv.tpl" -o trivy_image_scan_time-series-analytics-microservice.csv
