--- a/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
+++ b/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
@@ -189,6 +189,8 @@ jobs:
         repository: open-edge-platform/dl-streamer-tests
         persist-credentials: false
         ref: ea7ae3c99045ee1803aa842a2c46fcd46a47016f
+        path: dl-streamer-tests-repo
+
     - name: Debug
       run: |
         echo "This is just ls"
@@ -203,7 +205,7 @@ jobs:
       env:
         TEST_CONFIGS: ${{ env.TEST_CONFIGS }}
       run: |
-        cd dl-streamer-tests
+        cd dl-streamer-tests-repo
         mkdir functional_tests_results
         cd functional_tests_results
         DLS_TESTS_RESULTS_PATH=$PWD
