[ViPPET] Enable CI on initial-vippet-api (#1072)

--- a/.github/workflows/vippet-pr-workflow.yaml
+++ b/.github/workflows/vippet-pr-workflow.yaml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
       - release-*
+      - initial-vippet-api
     paths:
       - 'tools/visual-pipeline-and-platform-evaluation-tool/**'
   workflow_dispatch:
