[DLStreamer] Move initialization of test environment.

--- a/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
+++ b/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
@@ -150,20 +150,17 @@ jobs:
         name: hello_dlstreamer_output_video_${{ matrix.runner_print_label }}_${{ matrix.ubuntu_version }}_CPU_yolo11s
         path: ${{ env.DLS_REL_PATH }}/test_hello_dlstreamer
 
-    - name: Init tests configurations
+    - name: Link DL Streamer to home directory
       run: |
-        if [[ ${{ matrix.runner_print_label }} == "TGL" ]]; then
-          echo "TEST_CONFIGS=on_host/samples_TGL.json" >> $GITHUB_ENV
-          echo "Selected test configuration file: on_host/samples_TGL.json ✅" >> $GITHUB_STEP_SUMMARY
-        elif [[ ${{ matrix.runner_print_label }} == "ARL" ]]; then
-          echo "TEST_CONFIGS=on_host/samples_ARL.json" >> $GITHUB_ENV
-          echo "Selected test configuration file: on_host/samples_ARL.json ✅" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "Test configuration file: not found ❌" >> $GITHUB_STEP_SUMMARY
-          echo "❌ Cannot assign correct test configuration JSON file for runner based on label: ${{ matrix.runner_print_label }}"
-          echo "Please review and fix! Exiting..."
-          exit 1
-        fi
+        ln -s $PWD/$DLS_REL_PATH $HOME
+
+    - name: Check out test repository
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #4.2.2
+      with:
+        repository: open-edge-platform/dl-streamer-tests
+        persist-credentials: false
+        ref: nsz-fix-paths
+        path: dl-streamer-tests-repo
 
     - name: Init test environemtnt
       run: |
@@ -178,18 +175,6 @@ jobs:
         mkdir -p $HOME/.virtualenvs/dlstreamer
         python3 -m venv $HOME/.virtualenvs/dlstreamer
         $HOME/.virtualenvs/dlstreamer/bin/pip install --no-cache-dir --upgrade pip -r $DLS_REL_PATH/requirements.txt
-
-    - name: Link DL Streamer to home directory
-      run: |
-        ln -s $PWD/$DLS_REL_PATH $HOME
-
-    - name: Check out test repository
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #4.2.2
-      with:
-        repository: open-edge-platform/dl-streamer-tests
-        persist-credentials: false
-        ref: be671f53438c01ad148f227adf405fff32bbe0a4
-        path: dl-streamer-tests-repo
 
     - name: 🚀 Run tests
       id: run_tests
