--- a/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
+++ b/.github/workflows/dls-build-and-test-deb_pkgs-and-deb_imgs.yaml
@@ -43,7 +43,7 @@ jobs:
       with:
         repository: open-edge-platform/dl-streamer-tests
         persist-credentials: false
-        ref: nsz-fix-paths
+        ref: f0718807b76b3d6717dc8f20a6ddb7dbab837057
         path: dl-streamer-tests-repo
 
     - name: Check out edge-ai-libraries repository
