Add instance manager to handle pipeline run/benchmark requests

--- a/tools/visual-pipeline-and-platform-evaluation-tool/compose.yml
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/compose.yml
@@ -18,6 +18,7 @@ x-vippet: &vippet
   restart: on-failure:5
   environment:
     GST_DEBUG: "1"
+    LOG_LEVEL: INFO
     TZ: America/Los_Angeles
     MODELS_PATH: /models/output
     http_proxy: ${http_proxy}
