--- a/.github/workflows/trivy-config-mode.yaml
+++ b/.github/workflows/trivy-config-mode.yaml
@@ -135,7 +135,7 @@ jobs:
 
             if [ "$FAILURE_COUNT" -gt 0 ]; then
               echo "❌ Found $FAILURE_COUNT failures! Failing the job.
-              cat ${output_report_path}
+              cat "${output_report_path}"
               exit 1
             else
               echo "✅ No failures found. Passing."
