correct paths and qmassa command

--- a/tools/visual-pipeline-and-platform-evaluation-tool/collector/supervisord.conf
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/collector/supervisord.conf
@@ -2,8 +2,8 @@
 nodaemon=true
 user=root
 
-[program:qmassa_reader]
-command=qmassa -x -t /app/qmassa_log.json
+[program:qmassa]
+command=qmassa -ms-interval 1000 --no-tui --to-json /app/qmassa.fifo
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
