--- a/tools/visual-pipeline-and-platform-evaluation-tool/compose.yml
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/compose.yml
@@ -1,3 +1,5 @@
+# Always defines the service 'vippet' with the same name, independent of hardware profile.
+# Device setup is handled in override files.
 x-vippet: &vippet
   image: docker.io/intel/vippet-app:${DOCKER_TAG}
   build:
@@ -11,10 +13,10 @@ x-vippet: &vippet
   ports:
     - "7860:7860"
   healthcheck:
-    test: ["CMD", "curl", "--fail", "--silent", "--show-error", "--output", "/dev/null", "http://localhost:7860/"]
-    interval: 30s
-    timeout: 10s
-    retries: 5
+    test: ["CMD", "curl", "--fail", "--silent", "--show-error", "--output", "/dev/null", "http://localhost:7860/pipelines"]
+    interval: 10s
+    timeout: 5s
+    retries: 50
   restart: on-failure:5
   environment:
     GST_DEBUG: "1"
@@ -69,27 +71,9 @@ services:
       - https_proxy=${https_proxy}
       - no_proxy=${no_proxy}
     command: './model_manager.sh'
-  vippet-cpu:
+  vippet:  # Always 'vippet', hardware config from override files
     <<: *vippet
     container_name: vippet
-    profiles: [cpu]
-  vippet-gpu:
-    <<: *vippet
-    container_name: vippet
-    group_add:
-     - ${RENDER_GROUP_ID}
-    devices:
-      - "/dev/dri:/dev/dri"
-    profiles: [gpu]
-  vippet-npu:
-    <<: *vippet
-    container_name: vippet
-    group_add:
-     - ${RENDER_GROUP_ID}
-    devices:
-      - "/dev/dri:/dev/dri"
-      - "/dev/accel:/dev/accel"
-    profiles: [npu]
   collector:
     image: docker.io/intel/vippet-collector:${DOCKER_TAG}
     build:
@@ -112,6 +96,9 @@ services:
     volumes:
       - "./shared/collector-signals:/app/.collector-signals"
     restart: on-failure:5
+    depends_on:
+      vippet:
+        condition: service_healthy
     environment:
       http_proxy: ${http_proxy}
       https_proxy: ${https_proxy}
