[ViPPET] Implement endpoint for recordings (#1163)

--- a/tools/visual-pipeline-and-platform-evaluation-tool/Makefile
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/Makefile
@@ -59,12 +59,13 @@ pyright: $(VENV_DIR) ## Run pyright type checker
 generate_openapi: $(VENV_DIR) ## Generate OpenAPI schema file
 	set +u; . ./$</bin/activate; set -u ;\
 	cd $(PROJECT_NAME) ;\
-	PYTHONPATH=. python ../generate_openapi.py
+	PYTHONPATH=. SUPPORTED_MODELS_FILE=../shared/models/supported_models.yaml RECORDINGS_PATH=../shared/videos/input python ../generate_openapi.py
 
-# Environment setup target: always run before build/run targets that need .env and shared dirs
-env-setup:
-	mkdir -p shared/models/output && chmod o+w shared/models/output
+env-setup: ## Environment setup target: always run before build/run targets that need .env and shared dirs
 	mkdir -p shared/collector-signals && chmod o+w shared/collector-signals
+	mkdir -p shared/models/output && chmod o+w shared/models/output
+	mkdir -p shared/videos/input && chmod o+w shared/videos/input
+	mkdir -p shared/videos/video-generator && chmod o+w shared/videos/video-generator
 	./setup_env.sh
 
 build: env-setup ## Build core images (vippet-app, vippet-collector)
@@ -127,7 +128,7 @@ stop: ## Stop the docker compose services
 	docker compose down models collector videogenerator vippet-ui vippet
 
 clean: ## Clean all build artifacts
-	rm -rf shared/collector-signals shared/models/output/ shared/videos/
+	rm -rf shared/collector-signals shared/models/output/ shared/videos/input shared/videos/video-generator
 
 help: ## Print help for each target
 	@echo ViPPET make targets
