--- a/tools/visual-pipeline-and-platform-evaluation-tool/ui/nginx.conf
+++ b/tools/visual-pipeline-and-platform-evaluation-tool/ui/nginx.conf
@@ -24,6 +24,20 @@ server {
         proxy_read_timeout 30s;
     }
 
+    # WebSocket proxy for metrics
+    location /metrics/ws/ {
+        proxy_pass http://vippet:7860/metrics/ws/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+    }
+
     # Handle client-side routing for React Router
     location / {
         try_files $uri $uri/ /index.html;
